--- a/aula02/index.html
+++ b/aula02/index.html
@@ -1,9 +1,11 @@
 <!doctype html>
 <html lang="pt-br">
     <head>
-	<title>  </title>
-	<meta charset="utf-8">			
+		<title> Top 5 melhores bosses de Hollow Knight </title>
+		<meta charset="utf-8">			
     </head>
     <body>
+		<h1> Melhores boss fights de Hollow Knight </h1>
+		
     </body>
 </html>
